--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.numbers {
+  background: #fcfcfc;
+  margin-bottom: 1em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ball {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+  background: #666;
+  color: #fff;
+  border-radius: 50%;
+  line-height: 80px;
+  text-align: center;
+  font-size: 2rem;
+  font-weight:  bold;
+  margin-right: 5px;
+  margin-left: 5px;
+}
+
+.btn-container {
+  padding: 1em;
+  text-align: center;
+}
+
+.btn-container button {
+  padding: 10px 30px;
+  background: #498EEB;
+  border: none;
+  color: #fff;
 }
